--- a/package.json
+++ b/package.json
@@ -2,10 +2,11 @@
   "name": "pdf-to-image-converter",
   "version": "1.0.0",
   "description": "A powerful client-side PDF to Image converter with batch download and long-image stitching capabilities.",
-  "main": "index.tsx",
+  "type": "module",
   "scripts": {
-    "start": "vite",
-    "build": "vite build"
+    "dev": "vite",
+    "build": "vite build",
+    "preview": "vite preview"
   },
   "dependencies": {
     "jszip": "^3.10.1",
@@ -15,6 +16,11 @@
     "react-dom": "^18.2.0"
   },
   "devDependencies": {
+    "@types/react": "^18.2.0",
+    "@types/react-dom": "^18.2.0",
+    "@vitejs/plugin-react": "^4.2.1",
+    "autoprefixer": "^10.4.17",
+    "postcss": "^8.4.35",
     "tailwindcss": "^3.4.1",
     "typescript": "^5.3.3",
     "vite": "^5.0.12"
