--- a/package.json
+++ b/package.json
@@ -11,14 +11,15 @@
   "dependencies": {
     "jszip": "^3.10.1",
     "jspdf": "^2.5.1",
-    "lucide-react": "^0.294.0",
+    "lucide-react": "^0.562.0",
     "pdfjs-dist": "4.4.168",
-    "react": "^18.2.0",
-    "react-dom": "^18.2.0"
+    "react": "^19.2.3",
+    "react-dom": "^19.2.3",
+    "sweetalert2": "^11.10.5"
   },
   "devDependencies": {
-    "@types/react": "^18.2.0",
-    "@types/react-dom": "^18.2.0",
+    "@types/react": "^19.2.3",
+    "@types/react-dom": "^19.2.3",
     "@vitejs/plugin-react": "^4.2.1",
     "autoprefixer": "^10.4.17",
     "postcss": "^8.4.35",
